# IntegratedCompiler

./: .gitignore  CMakeCache.txt  CMakeLists.txt  IntegratedCompiler.code-workspace  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: automata.h.162DD003BA37ED2C.idx  dfa.cpp.43C601C571AE46F3.idx  dfa.h.DE3FC1D29F758C60.idx  gmock-actions.h.6AFEFBFFCA5B590B.idx  gmock-all.cc.9837267DA6B06129.idx  gmock-cardinalities.cc.33EB7C8E436F75A3.idx  gmock-cardinalities.h.D2C3D3ED620D2EC4.idx  gmock-function-mocker.h.B1E8C48D41D3638A.idx  gmock-generated-actions.h.E276BBA19D36E517.idx  gmock-internal-utils.cc.976BFD3EACA4532A.idx  gmock-internal-utils.h.49D6D849E10C8FCC.idx  gmock-matchers.cc.4727FCC5A69A7E53.idx  gmock-matchers.h.4B55BCEE7E527214.idx  gmock-matchers.h.CB5170A48C975CF3.idx  gmock-more-actions.h.B40828F75BDC25CF.idx  gmock-more-matchers.h.F971E27CFB52F410.idx  gmock-nice-strict.h.991381F4B3094C2B.idx  gmock-port.h.6C8FD439F84D7E33.idx  gmock-port.h.E8DB3152B39FF0AA.idx  gmock-pp.h.CD625FB94730EAB8.idx  gmock-spec-builders.cc.0748AA8E985ADF95.idx  gmock-spec-builders.h.30D706322F7941D0.idx  gmock.cc.D655326C5B8ECCEA.idx  gmock.h.9807086309D50672.idx  gmock_main.cc.FEDEA4DA96BD17E3.idx  (+43 more)
lexer/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lexer.cpp  lexer.h  nfa.cpp  nfa.h  test_dfa.cpp  test_dfa[1]_include.cmake  test_nfa.cpp
lexer/include/: automata.h  dfa.h  re.h
lexer/src/: dfa.cpp  nfa.cpp  re.cpp
lexer/test/: nfa_dfa_speed_test.cpp  test_dfa.cpp  test_nfa.cpp  test_re.cpp
main/: compiler.h  main.cpp
